# idc-cda

./: .gitignore  LICENSE  README.md  pyproject.toml
developer/: cda_overview.md  idc_cda_integration.md
notebooks/: 01_idc_overview.ipynb  02_cda_exploration.ipynb  03_cross_node_analysis.ipynb
