[project]
name = "idc-cda"
version = "0.1.0"
description = "Exploring CRDC Cancer Data Aggregator (CDA) with Imaging Data Commons (IDC)"
requires-python = ">=3.10"
dependencies = [
    "idc-index>=0.11.0",
    "cdapython>=2.0.0",
    "pandas>=2.0",
    "jupyter",
    "matplotlib",
    "seaborn",
    "tabulate",
    "requests",
]
